cards dashboard (mobile and dark theme)

--- a/index.html
+++ b/index.html
@@ -24,29 +24,60 @@
         </div>
       </div>
       <div class="body">
-        <article class="card-dashboard">
-          @nathanf
-          1987
-          Followers
-          12 Today
+        <article class="card-dashboard b-fc">
+          <div class="card-header">
+            <img src="static/images/icon-facebook.svg" alt="facebook">
+            <span>@nathanf</span>
+          </div>
+          <div class="card-body">
+            <h3> 1987 </h3>
+            Followers
+          </div>
+          <div class="card-footer">
+            <span>12 Today</span>
+          </div>
         </article>
-        <article class="card-dashboard">
-          @nathanf
-          1044
-          Followers
-          99 Today
+
+        <article class="card-dashboard b-tw">
+          <div class="card-header">
+            <img src="static/images/icon-twitter.svg" alt="twiiter">
+            <span>@nathanf</span>
+          </div>
+          <div class="card-body">
+            <h3> 1044 </h3>
+            Followers
+          </div>
+          <div class="card-footer">
+            <span class="up-subs"> 99 Today</span>
+          </div>
         </article>
-        <article class="card-dashboard">
-          @realnathanf
-          11k
-          Followers
-          1099 Today
+
+        <article class="card-dashboard b-ig">
+          <div class="card-header">
+            <img src="static/images/icon-instagram.svg" alt="instagram">
+            <span>@realnathanf</span>
+          </div>
+          <div class="card-body">
+            <h3> 11k </h3>            
+            Followers
+          </div>
+          <div class="card-footer">
+            <span class="up-subs"> 1099 Today </span>
+          </div>
         </article>
-        <article class="card-dashboard">
-          Nathan F.
-          8239
-          Subscribers
-          144 Today
+
+        <article class="card-dashboard b-yt">
+          <div class="card-header">
+            <img src="static/images/icon-youtube.svg" alt="youtube">
+            <span>Nathan F.</span>
+          </div>
+          <div class="card-body">
+            <h3> 8239 </h3>
+            Subscribers
+          </div>
+          <div class="card-footer">
+            <span class="down-subs"> 144 Today </span>
+          </div>
         </article>  
       </div>
     </section>
