--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section id="dashboard">
       <div class="header">
         <div class="title">
-          <h1>Social Media Dashboard</h1>
+          <h1 class="title-section">Social Media Dashboard</h1>
           <span> Total Followers: 23,004 </span>
           <div class="hr"></div>
         </div>
@@ -83,48 +83,92 @@
     </section>
     <section id="overview">
       <div class="overview-header">
-        <h2>Overview - Today</h2>
+        <h2 class="title-section" >Overview - Today</h2>
       </div>
-      <div class="body-overview">
+      <div class="overview-body">
+
         <article class="card-overview">
-          Page Views
-          87
-          3%
+          <div class="card-header">
+            <h4>Page Views</h4>
+            <img src="static/images/icon-facebook.svg" alt="facebook">
+          </div>
+          <div class="card-body">
+            <span>87</span>
+            <span class="percentage up-subs"> 3% </span>
+          </div>
         </article>
         <article class="card-overview">
-          Likes
-          52
-          2% 
+          <div class="card-header">
+            <h4>Likes</h4>
+            <img src="static/images/icon-facebook.svg" alt="facebook">
+          </div>
+          <div class="card-body">
+            <span>52</span>
+            <span class="percentage down-subs"> 2%  </span>
+          </div>
+        </article>
+
+        <article class="card-overview">
+          <div class="card-header">
+            <h4>Likes</h4>
+            <img src="static/images/icon-instagram.svg" alt="instagram">
+          </div>
+          <div class="card-body">
+            <span>5462</span>
+            <span class="percentage up-subs">2257%</span>
+          </div>
         </article>
         <article class="card-overview">
-          Likes
-          5462
-          2257%
+          <div class="card-header">
+            <h4>Profile Views</h4>
+            <img src="static/images/icon-instagram.svg" alt="instagram">
+          </div>
+          <div class="card-body">
+            <span>52k</span>
+            <span class="percentage up-subs">1375%</span>
+          </div>
+        </article>
+
+        <article class="card-overview">
+          <div class="card-header">
+            <h4>Retweets</h4>
+            <img src="static/images/icon-twitter.svg" alt="twitter">
+          </div>
+          <div class="card-body">
+            <span>117</span>
+            <span class="percentage up-subs">303%</span>
+          </div>
         </article>
         <article class="card-overview">
-          Profile Views
-          52k
-          1375%
+          <div class="card-header">
+            <h4>Likes</h4>
+            <img src="static/images/icon-twitter.svg" alt="twitter">
+          </div>
+          <div class="card-body">
+            <span>507</span>
+            <span class="percentage up-subs">553%</span>
+          </div>
+        </article>
+
+        <article class="card-overview">
+          <div class="card-header">
+            <h4>Likes</h4>
+            <img src="static/images/icon-youtube.svg" alt="youtube">
+          </div>
+          <div class="card-body">
+            <span>107</span>
+            <span class="percentage down-subs">19%</span>
+          </div>
         </article>
         <article class="card-overview">
-          Retweets
-          117
-          303%
-        </article>
-        <article class="card-overview">
-          Likes
-          507
-          553%
-        </article>
-        <article class="card-overview">
-          Likes
-          107
-          19%
-        </article>
-        <article class="card-overview">
-          Total Views
-          1407
-          12%
+          <div class="card-header">
+            <h4>Total Views</h4>
+            <img src="static/images/icon-youtube.svg" alt="youtube">
+          </div>
+          <div class="card-body">
+            <span>1407</span>
+            <span class="percentage down-subs">12%</span>
+          </div>
         </article>
       </div>
     </section>
