--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./static/styles.css">
 </head>
-<body>
-  <div id="main" class="dark">
+<body class="dark">
+  <div id="main">
     <section id="dashboard">
       <div class="header">
         <div class="title">
@@ -34,7 +34,7 @@
             Followers
           </div>
           <div class="card-footer">
-            <span>12 Today</span>
+            <span class="up-subs">12 Today</span>
           </div>
         </article>
 
@@ -174,7 +174,7 @@
     </section>
     
   </div>
-  <div class="bg bg-dark">
+  <div class="bg">
     <div class="bg-top"></div>
     <div class="bg-bottom"></div>
   </div>
