--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="dark-mode">
           <span> Dark Mode </span>
           <div class="switch-container">
-            <span class="switch"></span>
+            <span onclick="changeTheme()" class="switch"></span>
           </div>
         </div>
       </div>
@@ -180,7 +180,7 @@
   </div>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/LuisRivero021298">Luis Rivero</a>.
   </footer>
 
   <script src="./static/app.js"></script>
