--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
       </div>
       <div class="body">
-        <article class="card-dashboard b-fc">
+        <article class="card-dashboard b-fc container">
           <div class="card-header">
             <img src="static/images/icon-facebook.svg" alt="facebook">
             <span>@nathanf</span>
@@ -38,7 +38,7 @@
           </div>
         </article>
 
-        <article class="card-dashboard b-tw">
+        <article class="card-dashboard b-tw container">
           <div class="card-header">
             <img src="static/images/icon-twitter.svg" alt="twiiter">
             <span>@nathanf</span>
@@ -52,7 +52,7 @@
           </div>
         </article>
 
-        <article class="card-dashboard b-ig">
+        <article class="card-dashboard b-ig container">
           <div class="card-header">
             <img src="static/images/icon-instagram.svg" alt="instagram">
             <span>@realnathanf</span>
@@ -66,7 +66,7 @@
           </div>
         </article>
 
-        <article class="card-dashboard b-yt">
+        <article class="card-dashboard b-yt container">
           <div class="card-header">
             <img src="static/images/icon-youtube.svg" alt="youtube">
             <span>Nathan F.</span>
@@ -87,7 +87,7 @@
       </div>
       <div class="overview-body">
 
-        <article class="card-overview">
+        <article class="card-overview container">
           <div class="card-header">
             <h4>Page Views</h4>
             <img src="static/images/icon-facebook.svg" alt="facebook">
@@ -97,7 +97,7 @@
             <span class="percentage up-subs"> 3% </span>
           </div>
         </article>
-        <article class="card-overview">
+        <article class="card-overview container">
           <div class="card-header">
             <h4>Likes</h4>
             <img src="static/images/icon-facebook.svg" alt="facebook">
@@ -108,7 +108,7 @@
           </div>
         </article>
 
-        <article class="card-overview">
+        <article class="card-overview container">
           <div class="card-header">
             <h4>Likes</h4>
             <img src="static/images/icon-instagram.svg" alt="instagram">
@@ -118,7 +118,7 @@
             <span class="percentage up-subs">2257%</span>
           </div>
         </article>
-        <article class="card-overview">
+        <article class="card-overview container">
           <div class="card-header">
             <h4>Profile Views</h4>
             <img src="static/images/icon-instagram.svg" alt="instagram">
@@ -129,7 +129,7 @@
           </div>
         </article>
 
-        <article class="card-overview">
+        <article class="card-overview container">
           <div class="card-header">
             <h4>Retweets</h4>
             <img src="static/images/icon-twitter.svg" alt="twitter">
@@ -139,7 +139,7 @@
             <span class="percentage up-subs">303%</span>
           </div>
         </article>
-        <article class="card-overview">
+        <article class="card-overview container">
           <div class="card-header">
             <h4>Likes</h4>
             <img src="static/images/icon-twitter.svg" alt="twitter">
@@ -150,7 +150,7 @@
           </div>
         </article>
 
-        <article class="card-overview">
+        <article class="card-overview container">
           <div class="card-header">
             <h4>Likes</h4>
             <img src="static/images/icon-youtube.svg" alt="youtube">
@@ -160,7 +160,7 @@
             <span class="percentage down-subs">19%</span>
           </div>
         </article>
-        <article class="card-overview">
+        <article class="card-overview container">
           <div class="card-header">
             <h4>Total Views</h4>
             <img src="static/images/icon-youtube.svg" alt="youtube">
