--- a/index.html
+++ b/index.html
@@ -5,89 +5,90 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Social media dashboard</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./static/styles.css">
+  <link rel="stylesheet" href="./src/css/main.css">
 </head>
 <body class="dark">
   <div id="main">
     <section id="dashboard">
-      <div class="header">
-        <div class="title">
-          <h1 class="title-section">Social Media Dashboard</h1>
-          <span> Total Followers: 23,004 </span>
+      <div class="dashboard__header">
+        <div class="dashboard__header--content">
+          <h1 class="dashboard__header--title">Social Media Dashboard</h1>
+          <span class="dashboard__header--text"> Total Followers: 23,004 </span>
           <div class="hr"></div>
         </div>
-        <div class="dark-mode">
+        <div class="darkmode">
           <span> Dark Mode </span>
-          <div class="switch-container">
+          <div class="switch__container">
             <span onclick="changeTheme()" class="switch"></span>
           </div>
         </div>
       </div>
-      <div class="body">
-        <article class="card-dashboard b-fc container">
-          <div class="card-header">
+      <div class="dashboard__body">
+        <article class="card card--dashboard b-fc container">
+          <div class="card__header">
             <img src="static/images/icon-facebook.svg" alt="facebook">
             <span>@nathanf</span>
           </div>
-          <div class="card-body">
+          <div class="card__body">
             <h3> 1987 </h3>
             Followers
           </div>
-          <div class="card-footer">
+          <div class="card__footer">
             <span class="up-subs">12 Today</span>
           </div>
         </article>
 
-        <article class="card-dashboard b-tw container">
-          <div class="card-header">
+        <article class="card card--dashboard b-tw container">
+          <div class="card__header">
             <img src="static/images/icon-twitter.svg" alt="twiiter">
             <span>@nathanf</span>
           </div>
-          <div class="card-body">
+          <div class="card__body">
             <h3> 1044 </h3>
             Followers
           </div>
-          <div class="card-footer">
+          <div class="card__footer">
             <span class="up-subs"> 99 Today</span>
           </div>
         </article>
 
-        <article class="card-dashboard b-ig container">
-          <div class="card-header">
+        <article class="card card--dashboard b-ig container">
+          <div class="card__header">
             <img src="static/images/icon-instagram.svg" alt="instagram">
             <span>@realnathanf</span>
           </div>
-          <div class="card-body">
+          <div class="card__body">
             <h3> 11k </h3>            
             Followers
           </div>
-          <div class="card-footer">
+          <div class="card__footer">
             <span class="up-subs"> 1099 Today </span>
           </div>
         </article>
 
-        <article class="card-dashboard b-yt container">
-          <div class="card-header">
+        <article class="card card--dashboard b-yt container">
+          <div class="card__header">
             <img src="static/images/icon-youtube.svg" alt="youtube">
             <span>Nathan F.</span>
           </div>
-          <div class="card-body">
+          <div class="card__body">
             <h3> 8239 </h3>
             Subscribers
           </div>
-          <div class="card-footer">
+          <div class="card__footer">
             <span class="down-subs"> 144 Today </span>
           </div>
         </article>  
       </div>
     </section>
+
     <section id="overview">
       <div class="overview-header">
         <h2 class="title-section" >Overview - Today</h2>
       </div>
-      <div class="overview-body">
+      <div class="overview__body">
 
-        <article class="card-overview container">
+        <article class="card card-overview container">
           <div class="card-header">
             <h4>Page Views</h4>
             <img src="static/images/icon-facebook.svg" alt="facebook">
@@ -97,7 +98,7 @@
             <span class="percentage up-subs"> 3% </span>
           </div>
         </article>
-        <article class="card-overview container">
+        <article class="card card-overview container">
           <div class="card-header">
             <h4>Likes</h4>
             <img src="static/images/icon-facebook.svg" alt="facebook">
@@ -108,7 +109,7 @@
           </div>
         </article>
 
-        <article class="card-overview container">
+        <article class="card card-overview container">
           <div class="card-header">
             <h4>Likes</h4>
             <img src="static/images/icon-instagram.svg" alt="instagram">
@@ -118,7 +119,7 @@
             <span class="percentage up-subs">2257%</span>
           </div>
         </article>
-        <article class="card-overview container">
+        <article class="card card-overview container">
           <div class="card-header">
             <h4>Profile Views</h4>
             <img src="static/images/icon-instagram.svg" alt="instagram">
@@ -129,7 +130,7 @@
           </div>
         </article>
 
-        <article class="card-overview container">
+        <article class="card card-overview container">
           <div class="card-header">
             <h4>Retweets</h4>
             <img src="static/images/icon-twitter.svg" alt="twitter">
@@ -139,7 +140,7 @@
             <span class="percentage up-subs">303%</span>
           </div>
         </article>
-        <article class="card-overview container">
+        <article class="card card-overview container">
           <div class="card-header">
             <h4>Likes</h4>
             <img src="static/images/icon-twitter.svg" alt="twitter">
@@ -150,7 +151,7 @@
           </div>
         </article>
 
-        <article class="card-overview container">
+        <article class="card card-overview container">
           <div class="card-header">
             <h4>Likes</h4>
             <img src="static/images/icon-youtube.svg" alt="youtube">
@@ -160,7 +161,7 @@
             <span class="percentage down-subs">19%</span>
           </div>
         </article>
-        <article class="card-overview container">
+        <article class="card card-overview container">
           <div class="card-header">
             <h4>Total Views</h4>
             <img src="static/images/icon-youtube.svg" alt="youtube">
