card-dashboard style (mobile)

--- a/index.html
+++ b/index.html
@@ -25,57 +25,57 @@
       </div>
       <div class="dashboard__body">
         <article class="card card--dashboard b-fc container">
-          <div class="card__header">
+          <div class="card--dashboard__header">
             <img src="static/images/icon-facebook.svg" alt="facebook">
             <span>@nathanf</span>
           </div>
-          <div class="card__body">
+          <div class="card--dashboard__body">
             <h3> 1987 </h3>
             Followers
           </div>
-          <div class="card__footer">
+          <div class="card--dashboard__footer">
             <span class="up-subs">12 Today</span>
           </div>
         </article>
 
         <article class="card card--dashboard b-tw container">
-          <div class="card__header">
+          <div class="card--dashboard__header">
             <img src="static/images/icon-twitter.svg" alt="twiiter">
             <span>@nathanf</span>
           </div>
-          <div class="card__body">
+          <div class="card--dashboard__body">
             <h3> 1044 </h3>
             Followers
           </div>
-          <div class="card__footer">
+          <div class="card--dashboard__footer">
             <span class="up-subs"> 99 Today</span>
           </div>
         </article>
 
         <article class="card card--dashboard b-ig container">
-          <div class="card__header">
+          <div class="card--dashboard__header">
             <img src="static/images/icon-instagram.svg" alt="instagram">
             <span>@realnathanf</span>
           </div>
-          <div class="card__body">
+          <div class="card--dashboard__body">
             <h3> 11k </h3>            
             Followers
           </div>
-          <div class="card__footer">
+          <div class="card--dashboard__footer">
             <span class="up-subs"> 1099 Today </span>
           </div>
         </article>
 
         <article class="card card--dashboard b-yt container">
-          <div class="card__header">
+          <div class="card--dashboard__header">
             <img src="static/images/icon-youtube.svg" alt="youtube">
             <span>Nathan F.</span>
           </div>
-          <div class="card__body">
+          <div class="card--dashboard__body">
             <h3> 8239 </h3>
             Subscribers
           </div>
-          <div class="card__footer">
+          <div class="card--dashboard__footer">
             <span class="down-subs"> 144 Today </span>
           </div>
         </article>  
