--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <div id="main">
     <section id="dashboard">
       <div class="dashboard__header">
-        <div class="dashboard__header--content">
-          <h1 class="dashboard__header--title">Social Media Dashboard</h1>
-          <span class="dashboard__header--text"> Total Followers: 23,004 </span>
+        <div class="header__content">
+          <h1 class="header__title">Social Media Dashboard</h1>
+          <span class="header__text"> Total Followers: 23,004 </span>
           <div class="hr"></div>
         </div>
         <div class="darkmode">
@@ -24,7 +24,7 @@
         </div>
       </div>
       <div class="dashboard__body">
-        <article class="card card--dashboard b-fc container">
+        <article class="card card--dashboard b-fc">
           <div class="card--dashboard__header">
             <img src="static/images/icon-facebook.svg" alt="facebook">
             <span>@nathanf</span>
@@ -38,7 +38,7 @@
           </div>
         </article>
 
-        <article class="card card--dashboard b-tw container">
+        <article class="card card--dashboard b-tw">
           <div class="card--dashboard__header">
             <img src="static/images/icon-twitter.svg" alt="twiiter">
             <span>@nathanf</span>
@@ -52,7 +52,7 @@
           </div>
         </article>
 
-        <article class="card card--dashboard b-ig container">
+        <article class="card card--dashboard b-ig">
           <div class="card--dashboard__header">
             <img src="static/images/icon-instagram.svg" alt="instagram">
             <span>@realnathanf</span>
@@ -66,7 +66,7 @@
           </div>
         </article>
 
-        <article class="card card--dashboard b-yt container">
+        <article class="card card--dashboard b-yt">
           <div class="card--dashboard__header">
             <img src="static/images/icon-youtube.svg" alt="youtube">
             <span>Nathan F.</span>
@@ -82,91 +82,93 @@
       </div>
     </section>
 
-    <section id="overview">
-      <div class="overview-header">
-        <h2 class="title-section" >Overview - Today</h2>
-      </div>
-      <div class="overview__body">
+    <!-- *******************  OVERVIEW ********************!-->
 
-        <article class="card card-overview container">
-          <div class="card-header">
+    <section id="overview">
+      <div class="overview__header">
+        <h2 class="header__title" >Overview - Today</h2>
+      </div>
+
+      <div class="overview__body">
+        <article class="card card--overview">
+          <div class="card--overview__header">
             <h4>Page Views</h4>
             <img src="static/images/icon-facebook.svg" alt="facebook">
           </div>
-          <div class="card-body">
+          <div class="card--overview__body">
             <span>87</span>
             <span class="percentage up-subs"> 3% </span>
           </div>
         </article>
-        <article class="card card-overview container">
-          <div class="card-header">
+        <article class="card card--overview">
+          <div class="card--overview__header">
             <h4>Likes</h4>
             <img src="static/images/icon-facebook.svg" alt="facebook">
           </div>
-          <div class="card-body">
+          <div class="card--overview__body">
             <span>52</span>
             <span class="percentage down-subs"> 2%  </span>
           </div>
         </article>
 
-        <article class="card card-overview container">
-          <div class="card-header">
+        <article class="card card--overview">
+          <div class="card--overview__header">
             <h4>Likes</h4>
             <img src="static/images/icon-instagram.svg" alt="instagram">
           </div>
-          <div class="card-body">
+          <div class="card--overview__body">
             <span>5462</span>
             <span class="percentage up-subs">2257%</span>
           </div>
         </article>
-        <article class="card card-overview container">
-          <div class="card-header">
+        <article class="card card--overview">
+          <div class="card--overview__header">
             <h4>Profile Views</h4>
             <img src="static/images/icon-instagram.svg" alt="instagram">
           </div>
-          <div class="card-body">
+          <div class="card--overview__body">
             <span>52k</span>
             <span class="percentage up-subs">1375%</span>
           </div>
         </article>
 
-        <article class="card card-overview container">
-          <div class="card-header">
+        <article class="card card--overview">
+          <div class="card--overview__header">
             <h4>Retweets</h4>
             <img src="static/images/icon-twitter.svg" alt="twitter">
           </div>
-          <div class="card-body">
+          <div class="card--overview__body">
             <span>117</span>
             <span class="percentage up-subs">303%</span>
           </div>
         </article>
-        <article class="card card-overview container">
-          <div class="card-header">
+        <article class="card card--overview">
+          <div class="card--overview__header">
             <h4>Likes</h4>
             <img src="static/images/icon-twitter.svg" alt="twitter">
           </div>
-          <div class="card-body">
+          <div class="card--overview__body">
             <span>507</span>
             <span class="percentage up-subs">553%</span>
           </div>
         </article>
 
-        <article class="card card-overview container">
-          <div class="card-header">
+        <article class="card card--overview">
+          <div class="card--overview__header">
             <h4>Likes</h4>
             <img src="static/images/icon-youtube.svg" alt="youtube">
           </div>
-          <div class="card-body">
+          <div class="card--overview__body">
             <span>107</span>
             <span class="percentage down-subs">19%</span>
           </div>
         </article>
-        <article class="card card-overview container">
-          <div class="card-header">
+        <article class="card card--overview">
+          <div class="card--overview__header">
             <h4>Total Views</h4>
             <img src="static/images/icon-youtube.svg" alt="youtube">
           </div>
-          <div class="card-body">
+          <div class="card--overview__body">
             <span>1407</span>
             <span class="percentage down-subs">12%</span>
           </div>
@@ -176,8 +178,8 @@
     
   </div>
   <div class="bg">
-    <div class="bg-top"></div>
-    <div class="bg-bottom"></div>
+    <div class="bg__top"></div>
+    <div class="bg__bottom"></div>
   </div>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
