--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <article class="card card--dashboard b-fc">
           <div class="card--dashboard__header">
             <img src="static/images/icon-facebook.svg" alt="facebook">
-            <span>@nathanf</span>
+            <span class="card__subtitle">@nathanf</span>
           </div>
           <div class="card--dashboard__body">
-            <h3> 1987 </h3>
+            <h3 class="card__title"> 1987 </h3>
             Followers
           </div>
           <div class="card--dashboard__footer">
@@ -41,10 +41,10 @@
         <article class="card card--dashboard b-tw">
           <div class="card--dashboard__header">
             <img src="static/images/icon-twitter.svg" alt="twiiter">
-            <span>@nathanf</span>
+            <span class="card__subtitle">@nathanf</span>
           </div>
           <div class="card--dashboard__body">
-            <h3> 1044 </h3>
+            <h3 class="card__title"> 1044 </h3>
             Followers
           </div>
           <div class="card--dashboard__footer">
@@ -55,10 +55,10 @@
         <article class="card card--dashboard b-ig">
           <div class="card--dashboard__header">
             <img src="static/images/icon-instagram.svg" alt="instagram">
-            <span>@realnathanf</span>
+            <span class="card__subtitle">@realnathanf</span>
           </div>
           <div class="card--dashboard__body">
-            <h3> 11k </h3>            
+            <h3 class="card__title"> 11k </h3>            
             Followers
           </div>
           <div class="card--dashboard__footer">
@@ -69,10 +69,10 @@
         <article class="card card--dashboard b-yt">
           <div class="card--dashboard__header">
             <img src="static/images/icon-youtube.svg" alt="youtube">
-            <span>Nathan F.</span>
+            <span class="card__subtitle">Nathan F.</span>
           </div>
           <div class="card--dashboard__body">
-            <h3> 8239 </h3>
+            <h3 class="card__title"> 8239 </h3>
             Subscribers
           </div>
           <div class="card--dashboard__footer">
@@ -92,84 +92,84 @@
       <div class="overview__body">
         <article class="card card--overview">
           <div class="card--overview__header">
-            <h4>Page Views</h4>
+            <h4 class="card__subtitle">Page Views</h4>
             <img src="static/images/icon-facebook.svg" alt="facebook">
           </div>
           <div class="card--overview__body">
-            <span>87</span>
+            <span class="card__title">87</span>
             <span class="percentage up-subs"> 3% </span>
           </div>
         </article>
         <article class="card card--overview">
           <div class="card--overview__header">
-            <h4>Likes</h4>
+            <h4 class="card__subtitle">Likes</h4>
             <img src="static/images/icon-facebook.svg" alt="facebook">
           </div>
           <div class="card--overview__body">
-            <span>52</span>
+            <span class="card__title">52</span>
             <span class="percentage down-subs"> 2%  </span>
           </div>
         </article>
 
         <article class="card card--overview">
           <div class="card--overview__header">
-            <h4>Likes</h4>
+            <h4 class="card__subtitle">Likes</h4>
             <img src="static/images/icon-instagram.svg" alt="instagram">
           </div>
           <div class="card--overview__body">
-            <span>5462</span>
+            <span class="card__title">5462</span>
             <span class="percentage up-subs">2257%</span>
           </div>
         </article>
         <article class="card card--overview">
           <div class="card--overview__header">
-            <h4>Profile Views</h4>
+            <h4 class="card__subtitle">Profile Views</h4>
             <img src="static/images/icon-instagram.svg" alt="instagram">
           </div>
           <div class="card--overview__body">
-            <span>52k</span>
+            <span class="card__title">52k</span>
             <span class="percentage up-subs">1375%</span>
           </div>
         </article>
 
         <article class="card card--overview">
           <div class="card--overview__header">
-            <h4>Retweets</h4>
+            <h4 class="card__subtitle">Retweets</h4>
             <img src="static/images/icon-twitter.svg" alt="twitter">
           </div>
           <div class="card--overview__body">
-            <span>117</span>
+            <span class="card__title">117</span>
             <span class="percentage up-subs">303%</span>
           </div>
         </article>
         <article class="card card--overview">
           <div class="card--overview__header">
-            <h4>Likes</h4>
+            <h4 class="card__subtitle">Likes</h4>
             <img src="static/images/icon-twitter.svg" alt="twitter">
           </div>
           <div class="card--overview__body">
-            <span>507</span>
+            <span class="card__title">507</span>
             <span class="percentage up-subs">553%</span>
           </div>
         </article>
 
         <article class="card card--overview">
           <div class="card--overview__header">
-            <h4>Likes</h4>
+            <h4 class="card__subtitle">Likes</h4>
             <img src="static/images/icon-youtube.svg" alt="youtube">
           </div>
           <div class="card--overview__body">
-            <span>107</span>
+            <span class="card__title">107</span>
             <span class="percentage down-subs">19%</span>
           </div>
         </article>
         <article class="card card--overview">
           <div class="card--overview__header">
-            <h4>Total Views</h4>
+            <h4 class="card__subtitle">Total Views</h4>
             <img src="static/images/icon-youtube.svg" alt="youtube">
           </div>
           <div class="card--overview__body">
-            <span>1407</span>
+            <span class="card__title">1407</span>
             <span class="percentage down-subs">12%</span>
           </div>
         </article>
